[package]
name = "dx11-renderer"
version = "0.1.0"
edition = "2021"

[lib]
name = "dx11_renderer"

[[bin]]
name = "playground"
path = "src/bin/playground.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[dependencies]
glam = "0.30"
fontdue = "0.9"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
lto = "thin"
codegen-units = 1
